fix(animations): hide overflow in about section

--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -122,6 +122,7 @@ button {
   padding-top: 200px;
   position: relative;
   @include modifier("about") {
+    overflow: hidden;
     @include element("content") {
       padding: 45px 40px;
       border-bottom: 1px solid #DADADA;
